--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Schmiede - Playground of Ideas
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
          <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program </a><br /> 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a><br /> 
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
