--- a/location/index.html
+++ b/location/index.html
@@ -33,7 +33,8 @@ title: Saline Hallein - Schmiede
 
 <p class="lead">
   Hallein itself is a medium sized city which can provide most infrastructural
-  needs and peace from the world for focused work as well as outdoor experiences.
+  needs and peace from the world for focused work as well as outdoor experiences. 
+ </p>   <a href="http://bit.ly/schmiede2">Map of Hallein plus Schmiede relevant markers.</a>
 </p>
 
 <div class="tile-section">
