--- a/location/index.html
+++ b/location/index.html
@@ -11,7 +11,7 @@ title: Saline Hallein - Schmiede
   </div>
 </div>
 <p class="lead">
-  The Saline on the Pernerinsel  </p>   <a href="http://bit.ly/schmiede2">(Map plus Schmiede relevant markers)</a> is a unique environment.
+  The Saline on the Pernerinsel <a href="http://bit.ly/schmiede2">(Map plus Schmiede relevant markers)</a> is a unique environment.
   The building is not just a mere abandoned industrial facility with huge rooms,
   but a patchwork of extraordinary spaces built between 1850 and 1950. The salt
   storage rooms are all wooden, the tower concrete, steel and glas. Rooms range
