--- a/location/index.html
+++ b/location/index.html
@@ -11,7 +11,7 @@ title: Saline Hallein - Schmiede
   </div>
 </div>
 <p class="lead">
-  The Saline on the Pernerinsel <a href="http://bit.ly/schmiede2">(Map of Schmiede relevant markers)</a> is a unique environment.
+  The Saline on the Pernerinsel is a unique environment.
   The building is not just a mere abandoned industrial facility with huge rooms,
   but a patchwork of extraordinary spaces built between 1850 and 1950. The salt
   storage rooms are all wooden, the tower concrete, steel and glas. Rooms range
@@ -38,7 +38,8 @@ title: Saline Hallein - Schmiede
 
 <div class="tile-section">
   <p class="lead">
-    All this is located on an island in the Salzach on the verge between the alps and the flat lands.
+    All this is located on an island in the Salzach on the verge between the alps and the flat lands. 
+      </p> <a href="http://bit.ly/schmiede2">Map of Schmiede relevant markers</a>
   </p>
   <div class="row">
     <div class="col-md-8">
