--- a/location/index.html
+++ b/location/index.html
@@ -39,7 +39,7 @@ title: Saline Hallein - Schmiede
 <div class="tile-section">
   <p class="lead">
     All this is located on an island in the Salzach on the verge between the alps and the flat lands. 
-      </p> <a href="http://bit.ly/schmiede2">Map of Schmiede relevant markers</a>
+       <a href="http://bit.ly/schmiede2">Map of Schmiede relevant markers</a>
   </p>
   <div class="row">
     <div class="col-md-8">
