--- a/location/index.html
+++ b/location/index.html
@@ -38,7 +38,8 @@ title: Saline Hallein - Schmiede
 
 <div class="tile-section">
   <p class="lead">
-    All this is located on an island in the Salzach on the verge between the alps and the flat lands.  <p>
+    All this is located on an island in the Salzach on the verge between the alps and the flat lands.    </p>
+<p class="lead">
        <a href="http://bit.ly/schmiede2"> Map of Schmiede markers.</a>
   </p>
   <div class="row">
