--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@ title: Schmiede - Playground of Ideas
       <div data-configid="2046366/53260519" style="width:100%; height:376px;" class="issuuembed"></div>
       <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
-    <div class="col-md-5 lead">-->
+    <div class="col-md-5 lead">
+
+
+ 2018 -->
+
        <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2> 
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
          <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a><br /> 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a> <br /> 
+         <div data-configid="2046366/63655772" style="width:400px; height:300px;" class="issuuembed"></div>
+         <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
