--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@ title: Schmiede - Playground of Ideas
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
-         <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a> <br /> 
+       </p>
+       <div style="margin: 0 auto; width:400px; position: relative;">
          <div data-configid="2046366/63655772" style="width:400px; height:300px;" class="issuuembed"></div>
          <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+       </div>
+       <p>
+         <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a> <br /> 
+       </p>
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
