--- a/apply/index.html
+++ b/apply/index.html
@@ -53,7 +53,7 @@ title: Schmiede Application
         The program of Schmiede is work in progress till midsummer.
         The reason for this is that what actually will happens depends heavily on
         the projects and people participating each year. <br /><br />
-        <strong>Let us know about  public events you want in the application or <a href="/impressum.html">get in touch</a></strong>
+        <strong> <a href="/impressum.html">Get in touch</a></strong> with us till June 15th in case you want to participate in the SchmiedeProgram.
         <br /><br />
         As a reference, here is the program of Schmiede15: READY:
  <div data-configid="3084599/34031483" style="width:525px; height:373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>      
