--- a/partners.html
+++ b/partners.html
@@ -29,6 +29,6 @@ title: Partners - Schmiede
 <h2>Projekt Unterstützer</h2>
 <div>
   <div style="text-align:center;width:1000px;margin-left:0px;">
-    <img src="{{ site.base_url }}/images/partners/SCH_ProjektUnterstuetzer_0916.png" class="fimg" alt="" border="0" width="1140px">
+    <img src="{{ site.base_url }}/images/partners/Land Salzburg logo.png" class="fimg" alt="" border="0" width="1140px">
   </div>
 </div>
