--- a/partners.html
+++ b/partners.html
@@ -26,7 +26,7 @@ title: Partners - Schmiede
 </div>
 <br />
 
-<h2>Projekt Unterstützer</h2>
+<h2>Projekt Unterstützerr</h2>
 <div>
   <div style="text-align:center;width:1000px;margin-left:0px;">
     <img src="{{ site.base_url }}/images/partners/Land_Salzburg_logo.png" class="fimg" alt="" border="0" width="1140px">
