--- a/partners.html
+++ b/partners.html
@@ -26,9 +26,9 @@ title: Partners - Schmiede
 </div>
 <br />
 
-<h2>Projekt Unterstützerr</h2>
+<h2>Projekt Unterstützerx</h2>
 <div>
   <div style="text-align:center;width:1000px;margin-left:0px;">
-    <img src="{{ site.base_url }}/images/partners/Land_Salzburg_logo.png" class="fimg" alt="" border="0" width="1140px">
+    <img src="{{ site.base_url }}/images/partners/Salzburg_Land_logo18.png" class="fimg" alt="" border="0" width="1140px">
   </div>
 </div>
