--- a/partners.html
+++ b/partners.html
@@ -28,7 +28,7 @@ title: Partners - Schmiede
 
 <h2>Projekt Unterstützerx</h2>
 <div>
-  <div style="text-align:center;width:1000px;margin-left:0px;">
+   <div style="text-align:center;">
     <img src="{{ site.base_url }}/images/partners/Salzburg_Land_logo18.png" class="fimg" alt="" border="0" width="1140px">
   </div>
 </div>
