--- a/partners.html
+++ b/partners.html
@@ -6,6 +6,18 @@ title: Partners - Schmiede
 <h2>Förderer</h2>
 <div>
   <div style="text-align:center;">
+    <img src="{{ site.base_url }}/images/partners/Salzburg_Land_logo18.png" class="fimg" alt="" border="0" width="570">
+  </div>
+</div>
+<br />
+<div>
+  <div style="text-align:center;">
+    <img src="{{ site.base_url }}/images/partners/SCH_Foerderer_0916.png" class="fimg" alt="" border="0" width="1140px">
+  </div>
+</div>
+<br />
+<div>
+  <div style="text-align:center;">
     <img src="{{ site.base_url }}/images/partners/SCH_Foerderer_0916.png" class="fimg" alt="" border="0" width="1140px">
   </div>
 </div>
