--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ title: Schmiede - Playground of Ideas
 
  2018 -->
 
-       <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2> 
+       <h2 style="font-weight: normal;">SCHMIEDE<b>19</b>: better</h2> 
        <p>
-          August 29th - September 7th <br /> 
+          September 11th - September 20th <br /> 
           Hallein, Austria<br /> <br /> 
-       </p>
-       <div style="margin: 0 auto; width:700px; position: relative;">
+       </p>     
+     <!-- <div style="margin: 0 auto; width:700px; position: relative;">
          <div data-configid="2046366/63655772" style="width:700px; height:600px;" class="issuuembed"></div>
          <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
        </div>
@@ -39,7 +39,6 @@ title: Schmiede - Playground of Ideas
          <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
          <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program (English)</a> <br /> 
        </p>
-          <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
 As this is a liquid process the details cannot be communicated before August. The general flow at Schmiede: Inspiration, Work, Presentation.
