--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Schmiede - Playground of Ideas
        <p>
           September 11th - September 20th <br /> 
           Hallein, Austria<br /> <br /> <br /> 
-         Apply till May 31st<br />  
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />  
        </p>     
      <!-- <div style="margin: 0 auto; width:700px; position: relative;">
          <div data-configid="2046366/63655772" style="width:700px; height:600px;" class="issuuembed"></div>
