--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ title: Schmiede - Playground of Ideas
        <h2 style="font-weight: normal;">SCHMIEDE<b>19</b>: better</h2> 
        <p>
           September 11th - September 20th <br /> 
-          Hallein, Austria<br /> <br /> <br /> 
+          Hallein, Austria<br /> <br />  </p>  
          <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />  
-       </p>     
+         
      <!-- <div style="margin: 0 auto; width:700px; position: relative;">
          <div data-configid="2046366/63655772" style="width:700px; height:600px;" class="issuuembed"></div>
          <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
