--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ title: Schmiede - Playground of Ideas
           Hallein, Austria<br /> 
          <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />  <br />  
          </p>  
-  <h2 style="font-weight: normal;">ORTung 2019: Winter and Change</h2> 
+  <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
        <p>
-          January 7th - September 26th <br /> 
+          January 7th - January 26th 2019 <br /> 
           Hintersee, Austria<br /> 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program</a> <br />  
+         <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br />  
          </p>  
      <!-- <div style="margin: 0 auto; width:700px; position: relative;">
          <div data-configid="2046366/63655772" style="width:700px; height:600px;" class="issuuembed"></div>
