--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ title: Schmiede - Playground of Ideas
  2018 -->
 <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
        <p>
-          January 7th - January 26th 2019 <br /> 
+          January 7th till January 26th - 2019 <br /> 
           Hintersee, Austria<br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br />  
          </p>  
   
-       <h2 style="font-weight: normal;">SCHMIEDE<b>19</b>: better</h2> 
+       <h2 style="font-weight: normal;">Schmiede<b>19</b>: better</h2> 
        <p>
-          September 11th - September 20th <br /> 
+          September 11th till September 20th - 2019<br /> 
           Hallein, Austria<br /> 
          <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />  <br />  
          </p>  
