--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@ title: Schmiede - Playground of Ideas
           January 7th till 26th - 2019 <br /> 
           Hintersee, Austria<br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br />  
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />    
          <br /><br />  </p>  
    
        <h2 style="font-weight: normal;">Schmiede<b>19</b>: better</h2> 
        <p>
           September 11th till 20th - 2019<br /> 
           Hallein, Austria<br /> 
-         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />  <br />  
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a> <br />    
          </p>  
   
      <!-- <div style="margin: 0 auto; width:700px; position: relative;">
