--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@ title: Schmiede - Playground of Ideas
 
 
  2018 -->
-<h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
-       <p>
-          January 7th till 26th - 2019 <br /> 
-          Hintersee, Austria<br /> 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br />  <br /><br />     
-         </p>  
-   
+
        <h2 style="font-weight: normal;">Schmiede<b>19</b>: better</h2> 
        <p>
           September 11th till 20th - 2019<br /> 
           Hallein, Austria<br /> 
          <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a>    
          </p>  
+  <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
+       <p>
+          January 7th till 26th - 2019 <br /> 
+          Hintersee, Austria<br /> 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br /> 
+         <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a> <a target="_BLANK" href="https://www.fraeuleinflora.at">by Fräulein Flora/Qwant.</a><br />  <br /><br />     
+ <br /><br />     
+         </p>  
+   
   
      <!-- <div style="margin: 0 auto; width:700px; position: relative;">
          <div data-configid="2046366/63655772" style="width:700px; height:600px;" class="issuuembed"></div>
