--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@ title: Schmiede - Playground of Ideas
        <p>
           September 11th till 20th - 2019<br /> 
           Hallein, Austria<br /> 
-         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a>    
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a>   <br /> <br />     
+ <br /> 
          </p>  
   <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
        <p>
           January 7th till 26th - 2019 <br /> 
           Hintersee, Austria<br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br /> 
-         <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a> <a target="_BLANK" href="https://www.fraeuleinflora.at">by Fräulein Flora/Qwant.</a><br />  <br /><br />     
- <br /><br />     
+         <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a>  <br />
+            
          </p>  
    
   
