--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: Schmiede - Playground of Ideas
           January 7th till 26th - 2019 <br /> 
           Hintersee, Austria<br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br /> 
-         <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a>  <br />
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/ortung">Blog</a><a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a>  <br />
             
          </p>  
    
