--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Schmiede - Playground of Ideas
        <p>
           September 11th till 20th - 2019<br /> 
           Hallein, Austria<br /> 
-         <a target="_BLANK" href="http://schmiede.ca/apply/">Apply till May 31st</a>   <br /> <br />     
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Late Application till July 5th</a>   <br /> <br />     
  <br /> 
          </p>  
   <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
