--- a/apply/index.html
+++ b/apply/index.html
@@ -34,11 +34,11 @@ title: Schmiede Application
               </a>
             </dd>
             <dt>ApplicationProcessingFee:</dt>
-            <dd>65Eur (when accepted)</dd>
-            <dt>Application closes:</dt>
-            <dd>May 31st</dd>
+            <dd>65Eur due July 31st, then  €85,-. (when accepted)</dd>
+            <dt>Application deadline:</dt>
+            <dd> we process: regular: May 31st - late: July 5th - flex: you need to contact us after filling out the form.</dd>
             <dt>Application confirmation:</dt>
-            <dd>June 15th</dd>
+            <dd>regular: June 15th late: July 15th flex: asap, if we see it</dd>
             <dt>Age limit:</dt>
             <dd>18+</dd>
           </dl>
@@ -56,7 +56,7 @@ title: Schmiede Application
        
     
         As a reference, here is the program of Schmiede15: READY:
- <div data-configid="3084599/34031483" style="width:525px; height:373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>      
+ <div data-configid="3084599/34031483" style="width:525px; height:373px;" class="issuuembed"></div><script type="text/javascript" src="https://issuu.com/schmiede/docs/schmiede19"  async="true"></script>      
  </p>
 
       <h2 style="margin-top: 40px;">SchmiedeDays</h2>
