--- a/apply/index.html
+++ b/apply/index.html
@@ -37,8 +37,8 @@ title: Schmiede Application
             <dd>till July 31st 65€ then 85€     (when accepted)</dd>
             <dt>We process Applications on:</dt>
             <dd> regular: May 31st - late: July 5th - latelate: you need to contact us after filling out the form.</dd>
-            <dt>Application reply emails are sent on:</dt>
-            <dd>regular: June 15th - late: July 15th - latelate: when we see it (Please check your spam folders)</dd>
+            <dt>Application reply emails are sent:</dt>
+            <dd>regular: June 15th - late: July 15th - latelate: when we get to it, but summer and stuff...  (Please check your spam folders)</dd>
             <dt>Age limit:</dt>
             <dd>18+</dd>
           </dl>
