--- a/apply/index.html
+++ b/apply/index.html
@@ -50,7 +50,7 @@ title: Schmiede Application
   <div class="container">
     <div class="col-md-9 col-md-offset-1">
       <p class="lead">
-        The program of Schmiede is work in progress till midsummer.
+        The program of Schmiede is work in progress till midsummer. Find all our print medias since 2010 <a href="https://issuu.com/schmiede"> here</a>.
         The reason for this is that what actually will happens depends heavily on
         the projects and people participating each year. <br /><br />
        
