--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ title: Schmiede - Playground of Ideas
 
  2018 -->
 
-       <h2 style="font-weight: normal;">Schmiede<b>19</b>: better</h2> 
+       <h2 style="font-weight: normal;">Schmiede<b>20</b>:  Pferde / Horses
+</h2> 
        <p>
-          September 11th till 20th - 2019<br /> 
+          September 16th till 25th - 2020<br /> 
           Hallein, Austria<br /> 
          <a target="_BLANK" href="http://schmiede.ca/apply/">Late Application till July 5th</a>   <br /> <br />     
  <br /> 
