--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Schmiede - Playground of Ideas
        <p>
           September 16th till 25th - 2020<br /> 
           Hallein, Austria<br /> 
-         <a target="_BLANK" href="http://schmiede.ca/apply/">Late Application till July 5th</a>   <br /> <br />     
+         <a target="_BLANK" href="http://schmiede.ca/apply/">Late Application till May 31st</a>   <br /> <br />     
  <br /> 
          </p>  
   <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
