--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ title: Schmiede - Playground of Ideas
          </p>  
   <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
        <p>
-          January 7th till 26th - 2019 <br /> 
+          January 2020 <br /> 
           Hintersee, Austria<br /> 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/post/180786780012/ortung-winter-und-wandel">Program and Artists</a> <br /> 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/post/188853734632/ortung-2020-erfolg-german">Program and Artists</a> <br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/ortung">Blog</a> - <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a>  <br />
             
          </p>  
