--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Schmiede - Playground of Ideas
          <a target="_BLANK" href="http://schmiede.ca/apply/">Late Application till May 31st</a>   <br /> <br />     
  <br /> 
          </p>  
-  <h2 style="font-weight: normal;">ORTung: Winter and Change</h2> 
+  <h2 style="font-weight: normal;">ORTung: Success</h2> 
        <p>
           January 2020 <br /> 
           Hintersee, Austria<br /> 
