--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Schmiede - Playground of Ideas
           January 2020 <br /> 
           Hintersee, Austria<br /> 
          <a target="_BLANK" href="https://schmiede.tumblr.com/post/188853734632/ortung-2020-erfolg-german">Program and Artists</a> <br /> 
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/ortung">Blog</a> - <a target="_BLANK" href="http://bit.ly/ORTung19">Doku</a>  <br />
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/ortung">Blog</a> - <a target="_BLANK" href="https://www.instagram.com/explore/tags/ortung2020/">Doku</a>  <br />
             
          </p>  
    
