--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ As this is a liquid process the details cannot be communicated before August. Th
        </p>
     <br />
       <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a> | 
-       <a href="http://schmiede.tumblr.com/">BLOG</a> -->
+       <a href="http://schmiedehallein.com/blog/">BLOG</a> -->
     </div>
   </div>
 </div>
